replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/09_unterminated_block_comment.su
// Expected error: AKA0001 - unterminated block comment.

/* This comment never closes.
function vector Bad() {
    return embed("cat");
}
